WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
242875
exceptions thrown in `WKNavigationDelegate` methods should not affect WebKit
https://bugs.webkit.org/show_bug.cgi?id=242875
Summary
exceptions thrown in `WKNavigationDelegate` methods should not affect WebKit
Devin Rousso
Reported
2022-07-18 17:13:33 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2022-07-18 17:13:44 PDT
<
rdar://problem/94757789
>
Devin Rousso
Comment 2
2022-07-18 17:35:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2531
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug