exceptions thrown in `WKNavigationDelegate` methods should not affect WebKit https://bugs.webkit.org/show_bug.cgi?id=242875 <rdar://problem/94757789>

Reviewed by NOBODY (OOPS!).

Wrap each call inside `BEGIN_BLOCK_OBJC_EXCEPTIONS` and `END_BLOCK_OBJC_EXCEPTIONS`.

Note that we don't try to be smart by also invoking any completions, as it's possible for the app to
have already saved a reference to it before the exception was thrown, meaning that it could still be
invoked at some later time. In other words, there's no way for WebKit to know for sure whether the
completion will be invoked, so we can't do it on behalf of the app just in case.

* Source/WebKit/UIProcess/Cocoa/NavigationState.mm:
(WebKit::NavigationState::NavigationClient::decidePolicyForNavigationAction):
(WebKit::NavigationState::NavigationClient::decidePolicyForNavigationResponse):
(WebKit::NavigationState::NavigationClient::didStartProvisionalNavigation):
(WebKit::NavigationState::NavigationClient::didReceiveServerRedirectForProvisionalNavigation):
(WebKit::NavigationState::NavigationClient::didFailProvisionalNavigationWithError):
(WebKit::NavigationState::NavigationClient::didCommitNavigation):
(WebKit::NavigationState::NavigationClient::didFinishNavigation):
(WebKit::NavigationState::NavigationClient::didFailNavigationWithError):
(WebKit::NavigationState::NavigationClient::didReceiveAuthenticationChallenge):
(WebKit::NavigationState::NavigationClient::shouldAllowLegacyTLS):
(WebKit::NavigationState::NavigationClient::processDidTerminate):
(WebKit::NavigationState::NavigationClient::navigationActionDidBecomeDownload):
(WebKit::NavigationState::NavigationClient::navigationResponseDidBecomeDownload):

* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKNavigationDelegate.mm: Added.
(TEST.WKNavigationDelegate.NoCrashIfExceptionInDecidePolicyForNavigationAction):
(TEST.WKNavigationDelegate.NoCrashIfExceptionInDecidePolicyForNavigationActionWithPreferences):
(TEST.WKNavigationDelegate.NoCrashIfExceptionInDecidePolicyForNavigationResponse):
(TEST.WKNavigationDelegate.NoCrashIfExceptionInDidCommitNavigation):
(TEST.WKNavigationDelegate.NoCrashIfExceptionInDidFinishNavigation):

* Tools/TestWebKitAPI/SourcesCocoa.txt:
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:

* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKPrinting.mm:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewConfiguration.mm:
Drive-by: Add missing includes.