Tools/TestWebKitAPI/Tests/WebKitCocoa/WKPrinting.mm
@@ -25,6 +25,12 @@
 
 #import "config.h"
 
+#import "TestNavigationDelegate.h"
+#import "TestWKWebView.h"
+#import "Utilities.h"
+#import <WebKit/WKWebViewPrivateForTesting.h>
+#import <WebKit/_WKFrameHandle.h>
+
 typedef void (^CallCompletionBlock)();
 
 @interface PrintUIDelegate : NSObject <WKUIDelegate>
